# toddle-ops

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  GITHUB_ACTIONS.md  Makefile  README.md  _quarto.yml  about.qmd  capstone-info.md  capstone-info.qmd  capstone-writeup.md  deploy.sh  docker-compose.yml  index.qmd  main.py  pyproject.toml  quarto-document.qmd  testmodelssql.py  testpostdb.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmark.yml  database-tests.yml  docker.yml  release.yml  ruff.yml  security.yml  test.yml  typecheck.yml
docs/: GEMINI.html  about.html  capstone-info.html  capstone-writeup.html  index.html  quarto-document.html  search.json
docs/ideas/: project-ideas.html  todo.html
ideas/: project-ideas.md  todo.md
notebooks/: database-mvp.py  qa-team-mvp.py
src/toddle_ops/: app.py  config.py  enums.py  helpers.py  main.py  plugins.py  prompt.py  ui.py
src/toddle_ops/agents/: __init__.py  factory.py
src/toddle_ops/app/: agent.py  main.py
src/toddle_ops/config/: basic.py
src/toddle_ops/craft_research_team/: agent.py
src/toddle_ops/helpers/: run.py
src/toddle_ops/local_app/: agent.py  main.py
src/toddle_ops/materials_team/: .ideas.md
src/toddle_ops/mcp/: sqlite.py  supabase.py
src/toddle_ops/models/: __init__.py  actions.py  agents.py  databaseactions.py  enums.py  projects.py  reports.py
src/toddle_ops/services/: callbacks.py  (+2 more)
tests/agents/: test_agent_getters.py  test_factory.py
tests/models/: test_projects.py
website/: _quarto.yml  references.bib
(+35 files in other folders)
